--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,24 +1,16 @@
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-html, body, #root {
-	height: 100%;
+html,
+body,
+#root {
+  height: 100%;
 }
 
 body {
   font-family: Roboto, sans-serif;
   background-color: #f2f2f2;
-}
-
-.app {
-	min-height: 100%;
-	display: flex;
-  flex-direction: column;
-}
-
-.main {
-  flex: 1 1 auto; 
 }
